[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menu_game/menu_game.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 349.0
margin_right = 450.0
margin_bottom = 600.0
custom_constants/separation = 25
alignment = 1

[node name="options_menu" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 245.0
margin_right = 101.0
margin_bottom = 265.0
text = "Options"

[node name="exit_game" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 290.0
margin_right = 101.0
margin_bottom = 310.0
text = "Quit"

[node name="exit_menu" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 101.0
margin_bottom = 355.0
text = "Back to Game"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/options_menu" to="." method="_on_options_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/exit_game" to="." method="_on_exit_program_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/exit_menu" to="." method="_on_exit_menu_pressed"]
